# lineageproof

./: .gitignore  LICENSE  README.md  SECURITY.md  pyproject.toml
.github/ISSUE_TEMPLATE/: catalog-qa-intake.yml  project-inquiry.yml
docs/: LineageProof_Demo_en.srt  architecture.md  auditable-mutation-rfc.md  index.html  mcp-contract.md  player.css  player.js
docs/studio/: feed.xml  index.html  robots.txt  services.json  sitemap.xml
docs/studio/amazon-settlement-v2-reconciliation/: index.html
docs/studio/assets/: index-BDGtLXMT.js  index-BMrKPf4k.css  index-Bb9XcwuS.js  index-BblW4zRS.js  index-BhVEb2If.js  index-BmK-IITz.css  index-CCrYHEUw.js  index-CIG0KYuC.js  index-CM-7686x.css  index-CP3yw0AD.js  index-DB6xSIop.css  index-DWBGmHxt.js  index-Doi--_SO.css  index-DpcweGXS.js  index-DyRDdHJe.js  index-KIguNk5e.js  index-yIDfCkm9.css
docs/studio/excel-automation/: index.html
examples/: datahub-mcp-fixture.json  datahub-mcp-writeback-fixture.json  schema-change.json
examples/expected-output/: audit-report.json  datahub-writeback-preview.json  lineageproof.sarif  proposed-auditable-mutation-receipt.json  remediation-plan.md  synthetic-writeback-receipt.json  tool-call-receipts.json
scripts/: build_demo_frames.py  package_release.py  render_demo.swift  verify_release.py
src/lineageproof/: __init__.py  agent.py  cli.py  context.py  models.py  output.py  rules.py  writeback.py
submission/: DEMO_SCRIPT.md  DEVPOST_DRAFT.md  RELEASE_CHECKLIST.md  VIDEO_BUILD.md  YOUKU_PUBLICATION_PACKET_zh.md  YOUTUBE_PUBLICATION_PACKET.md
tests/: test_lineageproof.py
(+14 files in other folders)
