[project]
name = "lineageproof"
version = "0.1.0"
description = "Evidence-first schema change audits using DataHub MCP context"
readme = "README.md"
requires-python = ">=3.11"
license = "Apache-2.0"
authors = [{ name = "LineageProof contributors" }]
dependencies = []

[project.optional-dependencies]
mcp = ["mcp>=1.12,<2"]
dev = [
  "pytest>=8.3,<9",
  "ruff>=0.11,<1",
]

[project.scripts]
lineageproof = "lineageproof.cli:main"

[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lineageproof"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
